linux-2.6 (2.6.24-trunk1) UNRELEASED; urgency=low

  * Fake version

 -- maximilian attems <maks@debian.org>  Tue, 29 Jan 2008 22:14:41 +0100

linux-2.6 (2.6.24-1~experimental.1) UNRELEASED; urgency=low

  * New upstream release

  [ maximilian attems ]
  * topconfig set NOZOMI, CRYPTO_SEQIV, CRYPTO_CTR, CRYPTO_GCM, CRYPTO_CCM,
    CRYPTO_SALSA20, CRYPTO_LZO, CRYPTO_DEV_HIFN_795X, USB_SI470X,
    USB_STKWEBCAM, VIDEO_PVRUSB2_ONAIR_USB2, VIDEO_PVRUSB2_ONAIR_CREATOR,
    VIDEO_EM28XX_ALSA, CRYPTO_DEV_HIFN_795X_RNG, PCF8575, TPS65010, RTL8180,
    ENC28J60, R6040, CAN.
  * [amd64] Enable CRYPTO_SALSA20_X86_64.
  * [amd64, i386]: Enable LATENCYTOP.
  * topconfig disable PARPORT_PC_FIFO due to instabilities.
    (closes: #366165, #388309, #407816, #453911)
  * [amd64, i386]: Enable SONYPI_COMPAT for better sony laptop support.

 -- maximilian attems <maks@debian.org>  Tue, 29 Jan 2008 22:02:10 +0100

linux-2.6 (2.6.24-2) UNRELEASED; urgency=low

  * Fix broken merge of flavour specific settings.
    - [i386]: Recommends are fixed.
    - [s390/s390-tape]: Built as small image again.

 -- Bastian Blank <waldi@debian.org>  Mon, 28 Jan 2008 17:48:04 +0100

linux-2.6 (2.6.24-1) unstable; urgency=low

  * New upstream release
    (closes: #461639)

  [ Martin Michlmayr ]
  * Don't build the AdvanSys driver on ARM since it fails to compile.
  * Disable ATH5K on ARM since it fails to compile.
  * [arm/iop32x] Activate DMADEVICES.
  * [mips/mipsel] Turn off CONFIG_NIU since it fails to compile.

  [ maximilian attems ]
  * [amd64, i386]: Enable ACPI_SYSFS_POWER and disable ACPI_PROCFS_POWER.
  * [fw] Sync with latest git-ieee1394 for sbp2 fixes.

  [ Bastian Blank ]
  * Kill reboot warning from old templates.
  * Fix strange default value for link_in_boot. (closes: #425056)
  * [powerpc/powerpc]: Enable Efika support.
  * [powerpc]: Lower mkvmlinuz to the state of a bootloader.
  * [powerpc]: Remove ppc and m68k include dirs from headers.