@@ -1,20 +1,21 @@
-diff --git a/include/asm-arm/arch-ixp4xx/platform.h b/include/asm-arm/arch-ixp4xx/platform.h
-index 2a44d3d..695b9c4 100644
+http://www.arm.linux.org.uk/developer/patches/viewpatch.php?id=4714/2
+
+From: Krzysztof Halasa
+
+Adds platform structs and #defines required by drivers for
+IXP4xx built-in Ethernet and WAN (sync serial) ports.
+
+The actual drivers will reside in drivers/net/arm and
+drivers/net/wan and will be submitted separately.
+
+Signed-off-by: Krzysztof Halasa
+Signed-off-by: Rod Whitby
+
 --- a/include/asm-arm/arch-ixp4xx/platform.h
 +++ b/include/asm-arm/arch-ixp4xx/platform.h
-@@ -77,8 +77,7 @@ extern unsigned long ixp4xx_exp_bus_size;
+@@ -91,6 +91,27 @@ struct ixp4xx_pata_data {
  
- /*
-  * The IXP4xx chips do not have an I2C unit, so GPIO lines are just
-- * used to 
-- * Used as platform_data to provide GPIO pin information to the ixp42x
-+ * used as platform_data to provide GPIO pin information to the ixp42x
-  * I2C driver.
-  */
- struct ixp4xx_i2c_pins {
-@@ -86,6 +85,27 @@ struct ixp4xx_i2c_pins {
- 	unsigned long scl_pin;
- };
+ struct sys_timer;
  
 +#define IXP4XX_ETH_NPEA		0x00
 +#define IXP4XX_ETH_NPEB		0x10
@@ -38,7 +39,6 @@ index 2a44d3d..695b9c4 100644
 +};
 +
  /*
-  * This structure provide a means for the board setup code
-  * to give information to th pata_ixp4xx driver. It is
-
+  * Frequency of clock used for primary clocksource
+  */
 
