@@ -1,8 +1,27 @@
+Enables the new ixp4xx qmgr and npe drivers in ixp4xx_defconfig.
+
+Sets up the corresponding platform data for the nslu2 and nas100d
+boards, and reads the ethernet MAC address from the internal flash.
+
+Tested on both little-endian and big-endian kernels.
+
+Signed-off-by: Rod Whitby
+Signed-off-by: Michael Westerhof
+Tested-by: Tom King <tom@websb.net>
+
 diff --git a/arch/arm/mach-ixp4xx/nas100d-setup.c b/arch/arm/mach-ixp4xx/nas100d-setup.c
-index 54d884f..39d7d90 100644
+index 213a4ce..b0884c2 100644
 --- a/arch/arm/mach-ixp4xx/nas100d-setup.c
 +++ b/arch/arm/mach-ixp4xx/nas100d-setup.c
-@@ -21,6 +21,7 @@
+@@ -12,6 +12,7 @@
+  *
+  */
+ 
++#include <linux/if_ether.h>
+ #include <linux/kernel.h>
+ #include <linux/serial.h>
+ #include <linux/serial_8250.h>
+@@ -21,6 +22,7 @@
  #include <asm/mach-types.h>
  #include <asm/mach/arch.h>
  #include <asm/mach/flash.h>
@@ -10,25 +29,25 @@ index 54d884f..39d7d90 100644
  
  static struct flash_platform_data nas100d_flash_data = {
  	.map_name		= "cfi_probe",
-@@ -125,12 +126,30 @@ static struct platform_device nas100d_uart = {
+@@ -125,12 +127,30 @@ static struct platform_device nas100d_uart = {
  	.resource		= nas100d_uart_resources,
  };
  
 +/* Built-in 10/100 Ethernet MAC interfaces */
 +static struct eth_plat_info nas100d_plat_eth[] = {
-+        {
-+                .phy            = 0,
-+                .rxq            = 3,
++	{
++		.phy		= 0,
++		.rxq		= 3,
 +		.txreadyq	= 20,
-+        }
++	}
 +};
 +
 +static struct platform_device nas100d_eth[] = {
-+        {
-+                .name                   = "ixp4xx_eth",
-+                .id                     = IXP4XX_ETH_NPEB,
-+                .dev.platform_data      = nas100d_plat_eth,
-+        }
++	{
++		.name			= "ixp4xx_eth",
++		.id			= IXP4XX_ETH_NPEB,
++		.dev.platform_data	= nas100d_plat_eth,
++	}
 +};
 +
  static struct platform_device *nas100d_devices[] __initdata = {
@@ -41,32 +60,32 @@ index 54d884f..39d7d90 100644
  };
  
  static void nas100d_power_off(void)
-@@ -146,6 +165,9 @@ static void nas100d_power_off(void)
+@@ -146,6 +166,10 @@ static void nas100d_power_off(void)
  
  static void __init nas100d_init(void)
  {
++	DECLARE_MAC_BUF(mac_buf);
 +	uint8_t __iomem *f;
 +	int i;
 +
  	ixp4xx_sys_init();
  
  	/* gpio 14 and 15 are _not_ clocks */
-@@ -165,6 +187,33 @@ static void __init nas100d_init(void)
+@@ -165,6 +189,30 @@ static void __init nas100d_init(void)
  	(void)platform_device_register(&nas100d_uart);
  
  	platform_add_devices(nas100d_devices, ARRAY_SIZE(nas100d_devices));
-+
 +
 +	/*
 +	 * Map in a portion of the flash and read the MAC address.
 +	 * Since it is stored in BE in the flash itself, we need to
 +	 * byteswap it if we're in LE mode.
 +	 */
-+	if ((f = ioremap(IXP4XX_EXP_BUS_BASE(0), 0x1000000))) {
++	f = ioremap(IXP4XX_EXP_BUS_BASE(0), 0x1000000);
++	if (f) {
 +#ifdef __ARMEB__
-+		for (i = 0; i < 6; i++) {
++		for (i = 0; i < 6; i++)
 +			nas100d_plat_eth[0].hwaddr[i] = readb(f + 0xFC0FD8 + i);
-+		}
 +#else
 +		nas100d_plat_eth[0].hwaddr[0] = readb(f + 0xFC0FD8 + 3);
 +		nas100d_plat_eth[0].hwaddr[1] = readb(f + 0xFC0FD8 + 2);
@@ -77,11 +96,10 @@ index 54d884f..39d7d90 100644
 +#endif
 +		iounmap(f);
 +	}
-+	printk(KERN_INFO "NAS100D: Using MAC address %.2x:%.2x:%.2x:%.2x:%.2x:%.2x for port 0\n",
-+	       nas100d_plat_eth[0].hwaddr[0], nas100d_plat_eth[0].hwaddr[1],
-+	       nas100d_plat_eth[0].hwaddr[2], nas100d_plat_eth[0].hwaddr[3],
-+	       nas100d_plat_eth[0].hwaddr[4], nas100d_plat_eth[0].hwaddr[5]);
++	printk(KERN_INFO "NAS100D: Using MAC address %s for port 0\n",
++	       print_mac(mac_buf, nas100d_plat_eth[0].hwaddr));
 +
  }
  
  MACHINE_START(NAS100D, "Iomega NAS 100d")
+
