@@ -1,8 +1,27 @@
+Enables the new ixp4xx qmgr and npe drivers in ixp4xx_defconfig.
+
+Sets up the corresponding platform data for the nslu2 and nas100d
+boards, and reads the ethernet MAC address from the internal flash.
+
+Tested on both little-endian and big-endian kernels.
+
+Signed-off-by: Rod Whitby
+Signed-off-by: Michael Westerhof
+Tested-by: Tom King <tom@websb.net>
+
 diff --git a/arch/arm/mach-ixp4xx/nslu2-setup.c b/arch/arm/mach-ixp4xx/nslu2-setup.c
-index 77277d2..f5e9cf7 100644
+index 77277d2..332a066 100644
 --- a/arch/arm/mach-ixp4xx/nslu2-setup.c
 +++ b/arch/arm/mach-ixp4xx/nslu2-setup.c
-@@ -24,6 +24,7 @@
+@@ -14,6 +14,7 @@
+  * Changed to conform to new style __init ixdp425 kas11 10/22/04
+  */
+ 
++#include <linux/if_ether.h>
+ #include <linux/kernel.h>
+ #include <linux/serial.h>
+ #include <linux/serial_8250.h>
+@@ -24,6 +25,7 @@
  #include <asm/mach/arch.h>
  #include <asm/mach/flash.h>
  #include <asm/mach/time.h>
@@ -10,7 +29,7 @@ index 77277d2..f5e9cf7 100644
  
  static struct flash_platform_data nslu2_flash_data = {
  	.map_name		= "cfi_probe",
-@@ -140,6 +141,23 @@ static struct platform_device nslu2_uart = {
+@@ -140,6 +142,23 @@ static struct platform_device nslu2_uart = {
  	.resource		= nslu2_uart_resources,
  };
  
@@ -34,7 +53,7 @@ index 77277d2..f5e9cf7 100644
  static struct platform_device *nslu2_devices[] __initdata = {
  	&nslu2_i2c_gpio,
  	&nslu2_flash,
-@@ -147,6 +165,7 @@ static struct platform_device *nslu2_devices[] __initdata = {
+@@ -147,6 +166,7 @@ static struct platform_device *nslu2_devices[] __initdata = {
  #ifdef CONFIG_LEDS_IXP4XX
  	&nslu2_leds,
  #endif
@@ -42,17 +61,18 @@ index 77277d2..f5e9cf7 100644
  };
  
  static void nslu2_power_off(void)
-@@ -175,6 +194,9 @@ static struct sys_timer nslu2_timer = {
+@@ -175,6 +195,10 @@ static struct sys_timer nslu2_timer = {
  
  static void __init nslu2_init(void)
  {
++	DECLARE_MAC_BUF(mac_buf);
 +	uint8_t __iomem *f;
 +	int i;
 +
  	ixp4xx_sys_init();
  
  	nslu2_flash_resource.start = IXP4XX_EXP_BUS_BASE(0);
-@@ -191,6 +213,33 @@ static void __init nslu2_init(void)
+@@ -191,6 +215,31 @@ static void __init nslu2_init(void)
  	(void)platform_device_register(&nslu2_uart);
  
  	platform_add_devices(nslu2_devices, ARRAY_SIZE(nslu2_devices));
@@ -63,11 +83,11 @@ index 77277d2..f5e9cf7 100644
 +	 * Since it is stored in BE in the flash itself, we need to
 +	 * byteswap it if we're in LE mode.
 +	 */
-+	if ((f = ioremap(IXP4XX_EXP_BUS_BASE(0), 0x40000))) {
++	f = ioremap(IXP4XX_EXP_BUS_BASE(0), 0x40000);
++	if (f) {
 +#ifdef __ARMEB__
-+		for (i = 0; i < 6; i++) {
++		for (i = 0; i < 6; i++)
 +			nslu2_plat_eth[0].hwaddr[i] = readb(f + 0x3FFB0 + i);
-+		}
 +#else
 +		nslu2_plat_eth[0].hwaddr[0] = readb(f + 0x3FFB0 + 3);
 +		nslu2_plat_eth[0].hwaddr[1] = readb(f + 0x3FFB0 + 2);
@@ -78,11 +98,10 @@ index 77277d2..f5e9cf7 100644
 +#endif
 +		iounmap(f);
 +	}
-+	printk(KERN_INFO "NSLU2: Using MAC address %.2x:%.2x:%.2x:%.2x:%.2x:%.2x for port 0\n",
-+	       nslu2_plat_eth[0].hwaddr[0], nslu2_plat_eth[0].hwaddr[1],
-+	       nslu2_plat_eth[0].hwaddr[2], nslu2_plat_eth[0].hwaddr[3],
-+	       nslu2_plat_eth[0].hwaddr[4], nslu2_plat_eth[0].hwaddr[5]);
++	printk(KERN_INFO "NSLU2: Using MAC address %s for port 0\n",
++	       print_mac(mac_buf, nslu2_plat_eth[0].hwaddr));
 +
  }
  
  MACHINE_START(NSLU2, "Linksys NSLU2")
+
