@@ -18,10 +18,10 @@
 + bugfix/mips/tulip_mwi_fix.patch
 + features/arm/ixp4xx-feature-bits.patch
 + features/arm/ixp4xx-npe-and-qmgr.patch
-#+ features/arm/ixp4xx-net-headers.patch
++ features/arm/ixp4xx-net-headers.patch
 + features/arm/ixp4xx-net-drivers.patch
-#+ features/arm/nas100d-net-driver-support.patch
-#+ features/arm/nslu2-net-driver-support.patch
++ features/arm/nas100d-net-driver-support.patch
++ features/arm/nslu2-net-driver-support.patch
 + bugfix/sparc/drivers_net-broken.patch
 + bugfix/ia64/hardcode-arch-script-output.patch
 + bugfix/mips/disable-advansys.patch
