@@ -1,6 +1,10 @@
 linux-2.6 (2.6.24-trunk1) UNRELEASED; urgency=low
 
+  [ maximilian attems ]
   * Fake version
+
+  [ Martin Michlmayr ]
+  * [arm] Update IXP4xx Ethernet patches.
 
  -- maximilian attems <maks@debian.org>  Tue, 29 Jan 2008 22:14:41 +0100
 
